Added REST interface, moved configurations to the application.conf, add docker-image packager

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -7,38 +7,34 @@ akka {
   remote {
     enabled-transports = ["akka.remote.netty.tcp"]
     netty.tcp {
-      hostname = "127.0.0.1"
+      hostname = "0.0.0.0"
       port = 2551
-      port = ${?PORT}
+
     }
   }
 
-
   cluster {
-
+    seed-host = "0.0.0.0"
     seed-nodes = [
-      "akka.tcp://game-service-cluster@127.0.0.1:2551"
+      "akka.tcp://game-service-cluster@"${?akka.cluster.seed-host}":2551"
     ]
     min-nr-of-members = 1
-    //auto-down-unreachable-after = 30s
-
-    roles = [""]
-    roles = ${?ROLES}
 
     singleton {
-  //    singleton-name = "croupier"
-      role = ""
-
       hand-over-retry-interval = 1s
       min-number-of-hand-over-retries = 10
     }
 
     singleton-proxy {
- //     singletone-name = "croupier" //${akka.cluster.singleton.singleton-name}
-      role = ""
-
       singleton-identification-interval = 1s
       buffer-size = 1000
     }
   }
+}
+
+service {
+  withdraw.host = "localhost:8080"
+  withdraw.url = "http://"${?service.withdraw.host}"/api/v1/withdraw"
+  host = "0.0.0.0"
+  port = "8081"
 }
