Added persistence for Croupier singleton actor.

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -2,6 +2,7 @@ akka {
 
   actor {
     provider = "akka.cluster.ClusterActorRefProvider"
+    warn-about-java-serializer-usage = false
   }
 
   remote {
@@ -30,7 +31,17 @@ akka {
       buffer-size = 1000
     }
   }
+
+  persistence {
+    journal.plugin = "cassandra-journal"
+    snapshot-store.plugin = "cassandra-snapshot-store"
+  }
 }
+
+cassandra-journal.contact-points = ["cassandra_db", "127.0.0.1"]
+cassandra-snapshot-store.contact-points = ["cassandra_db", "127.0.0.1"]
+cassandra-journal.port = "9042"
+cassandra-snapshot-store.port = "9042"
 
 service {
   withdraw.host = "localhost:8080"
